# HEAAN-ResNet

./: 10000.cpp  10000_load.cpp  10000load.cpp  10000save.cpp  AppReLU.hpp  AppReLUtest.cpp  AvgpoolFC64.cpp  AvgpoolFC64.hpp  AvgpoolFC64p.hpp  AvgpoolFC64test.cpp  BN.hpp  CMakeLists.txt  Conv.cpp  Conv.hpp  Conv_parallel.cpp  Conv_parallel.hpp  Conv_parallelp.hpp  Convp.hpp  DSB+BN.cpp  DSB+BN.hpp  DSB+BN_parallel.hpp  DSB.cpp  DSB.hpp  DSB_test.cpp  DSB_test.hpp  DemoIO.hpp  HEaaNTimer.hpp  Inference.cpp  Inference40.cpp  Inference40p.cpp  Inference_test.cpp  MPPacking.cpp  MPPacking.hpp  MPPacking_old.hpp  MPPacking_parallel.hpp  RB+BN.cpp  RB+BN.hpp  RB+BN_parallel.hpp  RB.cpp  RB.hpp  (+59 more)
image/: image_1.txt  image_10.txt  image_100.txt  image_101.txt  image_102.txt  image_103.txt  image_104.txt  image_105.txt  image_106.txt  image_107.txt  image_108.txt  image_109.txt  image_11.txt  image_110.txt  image_111.txt  image_112.txt  image_113.txt  image_114.txt  image_115.txt  image_116.txt  image_117.txt  image_118.txt  image_119.txt  image_12.txt  image_120.txt  image_121.txt  image_122.txt  image_123.txt  image_124.txt  image_125.txt  image_126.txt  image_127.txt  image_128.txt  image_129.txt  image_13.txt  image_130.txt  image_131.txt  image_132.txt  image_133.txt  image_134.txt  (+274 more)
kernel/multiplicands/: block0conv0multiplicands16_3_3_3  block1conv0multiplicands16_16_3_3  block1conv1multiplicands16_16_3_3  block2conv0multiplicands16_16_3_3  block2conv1multiplicands16_16_3_3  block3conv0multiplicands16_16_3_3  block3conv1multiplicands16_16_3_3  block4conv0multiplicands32_16_3_3  block4conv1multiplicands32_32_3_3  block4conv_onebyone_multiplicands32_16_1_1  block5conv0multiplicands32_32_3_3  block5conv1multiplicands32_32_3_3  block6conv0multiplicands32_32_3_3  block6conv1multiplicands32_32_3_3  block7conv0multiplicands64_32_3_3  block7conv1multiplicands64_64_3_3  block7conv_onebyone_multiplicands64_32_1_1  block8conv0multiplicands64_64_3_3  block8conv1multiplicands64_64_3_3  (+3 more)
label/: label_1.txt  label_10.txt  label_100.txt  label_101.txt  label_102.txt  label_103.txt  label_104.txt  label_105.txt  label_106.txt  label_107.txt  label_108.txt  label_109.txt  label_11.txt  label_110.txt  label_111.txt  label_112.txt  label_113.txt  label_114.txt  label_115.txt  label_116.txt  label_117.txt  label_118.txt  label_119.txt  label_12.txt  label_120.txt  label_121.txt  label_122.txt  label_123.txt  label_124.txt  label_125.txt  label_126.txt  label_127.txt  label_128.txt  label_129.txt  label_13.txt  label_130.txt  label_131.txt  label_132.txt  label_133.txt  label_134.txt  (+273 more)
parameters(filters and batch normalizations blended)/: block0conv0multiplicands[16,3,3,3]  block0conv0summands[16]  block1conv0multiplicands[16,16,3,3]  block1conv0summands[16]  block1conv1multiplicands[16,16,3,3]  block1conv1summands[16]  block2conv0multiplicands[16,16,3,3]  block2conv0summands[16]  block2conv1multiplicands[16,16,3,3]  block2conv1summands[16]  block3conv0multiplicands[16,16,3,3]  block3conv0summands[16]  block3conv1multiplicands[16,16,3,3]  block3conv1summands[16]  block4conv(onebyone)multiplicands[32,16,1,1]  block4conv(onebyone)summands[32]  block4conv0multiplicands[32,16,3,3]  block4conv0summands[32]  block4conv1multiplicands[32,32,3,3]  block4conv1summands[32]  block5conv0multiplicands[32,32,3,3]  block5conv0summands[32]  block5conv1multiplicands[32,32,3,3]  block5conv1summands[32]  block6conv0multiplicands[32,32,3,3]  block6conv0summands[32]  block6conv1multiplicands[32,32,3,3]  block6conv1summands[32]  block7conv(onebyone)multiplicands[64,32,1,1]  block7conv(onebyone)summands[64]  block7conv0multiplicands[64,32,3,3]  block7conv0summands[64]  block7conv1multiplicands[64,64,3,3]  block7conv1summands[64]  block8conv0multiplicands[64,64,3,3]  block8conv0summands[64]  block8conv1multiplicands[64,64,3,3]  block8conv1summands[64]  block9conv0multiplicands[64,64,3,3]  block9conv0summands[64]  (+2 more)
(+97 files in other folders)
